--- a/website/baseStyle/base.css
+++ b/website/baseStyle/base.css
@@ -14,6 +14,8 @@ a:visited {
 
 .titleBox {
     word-wrap: break-word;
+    margin-top: auto;
+    margin-left: auto;
     padding-left: 10px;
     padding-right: 10px;
     width: auto;
