--- a/website/baseStyle/base.css
+++ b/website/baseStyle/base.css
@@ -6,6 +6,9 @@ a:visited {
     color: black;
     text-decoration: none;
 }
+pre {
+    white-space: pre-wrap;
+}
 
 .backgroundBox {
     display: flex;
@@ -230,6 +233,7 @@ a:visited {
 }
 
 .imageBox {
+    color: black;
     text-align: left;
     margin-left: 10vw;
     padding-left: 10px;
