--- a/website/baseStyle/base.css
+++ b/website/baseStyle/base.css
@@ -43,6 +43,14 @@ pre {
     background-color: transparent;
 }
 
+.contentRowBox {
+    width: inherit;
+    display: flex;
+    padding-left: 10vw;
+    flex-direction: row-reverse;
+    background-color: transparent;
+}
+
 
 /*mobile only style*/
 .backgroundTopImage {
@@ -121,6 +129,15 @@ pre {
     background-color: transparent;
 }
 
+.textBoxHalf {
+        color: rgb(179,174,169);
+        word-wrap: break-word;
+        width: auto;
+        max-width: 38vw;
+        background-color: transparent;
+    }
+
+
 /*pc only style*/
 @media (min-width: 70vh) {
     .backgroundTopImage {
@@ -170,8 +187,9 @@ pre {
         background-size: cover;
     }
     .contentBackgroundMidImage {
-        aspect-ratio: 16/9;
+        
         margin-right: 0;
+        width: inherit;
         display: flex;
         flex-direction: column;
         image-rendering: pixelated;
@@ -198,6 +216,14 @@ pre {
         padding-right: 10px;
         width: auto;
         max-width: 55vw;
+        background-color: transparent;
+    }
+    
+    .textBoxHalf {
+        color: rgb(179,174,169);
+        word-wrap: break-word;
+        width: auto;
+        max-width: 50%;
         background-color: transparent;
     }
 }
@@ -246,8 +272,23 @@ pre {
     height: auto;
     max-width: 75vw;
     image-resolution: snap;
-    background-color: rgb(139,134,129);
-    ;
+    background-color: rgb(139,134,129);;
+}
+
+.imageBoxHalf {
+    color: black;
+    text-align: left;
+    margin-left: 0vw;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: auto;
+    max-width: 75vw;
+    height: auto;
+    max-width: 75vw;
+    image-resolution: snap;
+    background-color: rgb(139,134,129);;
 }
 
 
