--- a/website/baseStyle/base.css
+++ b/website/baseStyle/base.css
@@ -152,6 +152,40 @@ pre {
     image-resolution: snap;
     background-color: rgb(139,134,129);;
 }
+    
+    .backgroundTopImage {
+        aspect-ratio: 16/9;
+        /* 9vw/16 = distance between image and top */
+        margin-top: calc(-9vw/16);
+        display: flex;
+        flex-direction: column;
+        image-rendering: pixelated;
+        background: url(baseImage/backgroundImagesPc/backgroundTopImage.png);
+        background-repeat: no-repeat;
+        background-size: 1024px auto;
+        background-position: bottom;
+    }
+    .backgroundMidImage {
+        margin-top: 0px;
+        height: auto;
+        min-height: 56.25vw;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        image-rendering: pixelated;
+        background: url(baseImage/backgroundImagesPc/backgroundMidImage2.png), url(baseImage/backgroundImagesPc/backgroundMidImage.png);
+        background-repeat: repeat-y;
+        background-size: 1024px auto;
+    }
+    .backgroundBottomImage {
+        aspect-ratio: 16/9;
+        display: flex;
+        flex-direction: column;
+        image-rendering: pixelated;
+        background: url(baseImage/backgroundImagesPc/backgroundBottomImage.png);
+        background-repeat: no-repeat;
+        background-size: 1024px auto;
+    }
     .contentBackgroundTopImage {
         aspect-ratio: 16/9;
         margin-right: 0;
@@ -213,6 +247,8 @@ pre {
 
 /*pc only style*/
 @media (min-width: 70vh){
+    @media not all and (device-width: 1024px){
+            
     .backgroundTopImage {
         aspect-ratio: 16/9;
         /* 9vw/16 = distance between image and top */
@@ -247,7 +283,6 @@ pre {
         background-size: contain;
     }
     
-    @media not all and (device-width: 1024px){
     .contentBackgroundTopImage {
         aspect-ratio: 16/9;
         margin-right: 0;
