--- a/website/baseStyle/base.css
+++ b/website/baseStyle/base.css
@@ -157,6 +157,7 @@ pre {
     .backgroundTopImage {
         aspect-ratio: 16/9;
         /* 9vw/16 = distance between image and top */
+        width: 100vw;
         margin-top: calc(-9vw/16);
         display: flex;
         flex-direction: column;
@@ -167,6 +168,7 @@ pre {
         background-position: bottom;
     }
     .backgroundMidImage {
+        width: 100vw;
         margin-top: 0px;
         height: auto;
         min-height: 56.25vw;
@@ -180,6 +182,7 @@ pre {
     }
     .backgroundBottomImage {
         aspect-ratio: 16/9;
+        width: 100vw;
         display: flex;
         flex-direction: column;
         image-rendering: pixelated;
