--- a/website/baseStyle/base.css
+++ b/website/baseStyle/base.css
@@ -128,6 +128,10 @@ pre {
 
 /*for landscape ipad layouts only*/
 @media only screen and (device-width: 1024px) {
+    img {
+        width: 350px;
+    }
+    
     .textBox {
         color: rgb(179,174,169);
         margin-right: 0vw;
