--- a/website/baseStyle/base.css
+++ b/website/baseStyle/base.css
@@ -37,6 +37,12 @@ pre {
     flex-direction: row-reverse;
 }
 
+.decorationFiller {
+    background-color: aquamarine;
+    width: 100%;
+    flex: 1;
+}
+
 
 .imageBox {
     color: black;
@@ -149,6 +155,8 @@ pre {
 }
     
 .textBox {
+        display: flex;
+        flex-direction: column;
         color: rgb(179,174,169);
         margin-left: 10vw;
         word-wrap: break-word;
@@ -159,6 +167,8 @@ pre {
         background-color: transparent;
 }  
 .textBoxHalf {
+        display: flex;
+        flex-direction: column;
         color: rgb(179,174,169);
         word-wrap: break-word;
         width: auto;
@@ -277,6 +287,8 @@ pre {
 }
     
 .textBox {
+    display: flex;
+    flex-direction: column;
     color: rgb(179,174,169);
     margin: auto;
     word-wrap: break-word;
@@ -285,6 +297,8 @@ pre {
     background-color: transparent;
 }
 .textBoxHalf {
+    display: flex;
+    flex-direction: column;
     color: rgb(179,174,169);
     word-wrap: break-word;
     width: auto;
@@ -315,7 +329,6 @@ pre {
 .imageBoxHalf {
     color: black;
     text-align: left;
-    margin-bottom: auto;
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 10px;
