--- a/website/baseStyle/base.css
+++ b/website/baseStyle/base.css
@@ -38,9 +38,16 @@ pre {
 }
 
 .decorationFiller {
-    background-color: aquamarine;
+    aspect-ratio: 5 / 2;
     width: 100%;
     flex: 1;
+}
+
+#deco1 {
+    background-image: url(baseImage/backgroundDecorationImages/square.png);
+    background-size: calc(50vh - 5vw);
+    background-repeat: no-repeat;
+    background-clip: border-box;
 }
 
 
