--- a/tests/test.css
+++ b/tests/test.css
@@ -11,7 +11,7 @@ h1 {
     display: flex;
     flex-direction: row-reverse;
     width: inherit;
-    padding: 2%;
+    padding-inline: 2%;
     background-color: transparent;
 }
 
@@ -24,7 +24,7 @@ h1 {
     color: gainsboro;
     word-wrap: break-word;
     width: 50%;
-    padding: 2%;
+    padding-inline: 2%;
     background-color: transparent;
 }
 
