--- a/tests/test.css
+++ b/tests/test.css
@@ -1,16 +1,27 @@
+html, body {
+    height: 100%;
+}
+
+html {
+    display: table;
+    margin: auto;
+}
+
 body {
-margin: 0%;
+    display: table-cell;
+    vertical-align: middle;
+    margin: 0%;
 }
 
 h1 {
-    font-size: x-small;
+    font-size: small;
 }
 
 /*alows you to place two half elements next to each other*/
 .contentRowBox {
     display: flex;
     flex-direction: row-reverse;
-    width: inherit;
+    width: small;
     padding-inline: 2%;
     background-color: transparent;
 }
